Change password functionality #fctC292a

--- a/src/app/spots/form.html
+++ b/src/app/spots/form.html
@@ -71,7 +71,7 @@
       </div>
       <div class="col-md-offset-3 col-md-6 section">
         <div class="form-group submit">
-          <input type="submit" value="{{ 'SPOT_FORM.SUBMIT' | translate }}" class="btn btn-dark">
+          <input type="submit" value="{{ 'OTHER.SUBMIT' | translate }}" class="btn btn-dark">
         </div>
       </div>
     </form>
