--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="col-md-12">
       <button class="btn btn-dark">{{ 'OTHER.UPDATE' | translate }}</button>
-      <button class="btn btn-dark">{{ 'OTHER.CHANGE_PASSWORD' | translate }}</button>
+      <button (click)="changePassword()" class="btn btn-dark">{{ 'OTHER.CHANGE_PASSWORD' | translate }}</button>
     </div>
   </div>
   <div class="row spots">
