--- a/src/app/spots/spot-detail/spot-detail.component.html
+++ b/src/app/spots/spot-detail/spot-detail.component.html
@@ -17,7 +17,10 @@
 				<div class="col-md-9 main">
 					<h3 class="spot-title">{{ spot.title }}</h3>
 					<div class="geo_link">
-						<a href="#"><img src="/sportenjoy/assets/images/geo-link-icon.png" />{{ spot.city }}, {{ spot.country}}</a>
+						<a href="#">
+              <img src="https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/content/geo-link-icon.png" />
+              {{ spot.city }}, {{ spot.country}}
+            </a>
 					</div>
           <sebm-google-map
             [latitude]="spot.latitude"
@@ -52,7 +55,10 @@
           <div class="spot-stats">
 						<div class="col-md-4 col-xs-4"><p>{{ spot.rating }}<span class="glyphicon glyphicon-star"></span></p></div>
 						<div class="col-md-4 col-xs-4"><p>{{ spot.beenHere }}<span class="glyphicon glyphicon-eye-open"></span></p></div>
-            <div class="col-md-4 col-xs-4"><img [src]="'/sportenjoy/assets/images/' + spot.category + '.png'" /></div>
+            <div class="col-md-4 col-xs-4">
+              <img
+                [src]="'https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/categories/' + decode(spot.category) + '.png'" />
+            </div>
 					</div>
 				</div>
 			</div>
