--- a/src/app/spots/spots-top/spots-top.component.html
+++ b/src/app/spots/spots-top/spots-top.component.html
@@ -18,7 +18,7 @@
 							<div class="row">
 								<div class="col-md-4 col-xs-4"><p>{{ spot.rating }} <span class="glyphicon glyphicon-star"></span></p></div>
 								<div class="col-md-4 col-xs-4"><p>{{ spot.beenHere}} <span class="glyphicon glyphicon-eye-open"></span></p></div>
-								<div class="col-md-4 col-xs-4"><p><img [src]="'assets/images/' + spot.category + '.png'" /></p></div>
+								<div class="col-md-4 col-xs-4"><p><img [src]="'assets/images/' + decode(spot.category) + '.png'" /></p></div>
 							</div>
 						</div>
 					</div>
