--- a/src/app/spots/spot-detail/spot-detail.component.html
+++ b/src/app/spots/spot-detail/spot-detail.component.html
@@ -83,6 +83,80 @@
             <!-- <a *ngIf="isModerator()" (click)="gotoUpdate()" class="alert-link">Click here to login and add a picture</a> -->
         </div>
 			</div>
+      <div class="col-md-12">
+        <h3 class="pull-left">{{ 'SPOT.COMMENTS' | translate }}</h3>
+        <button (click)="newComment()" class="btn btn-dark pull-right" style="padding: 10px 15px;">{{ 'SPOT.WRITE_COMMENT' | translate }}</button>
+      </div>
+      <div *ngIf="spot.original_comments.length != 0" class="col-sm-9">
+        <div class="comments-showing">
+          <p><strong>{{ leftBound }}-{{ rightBound }}</strong> of {{ spot.original_comments.length }} comments</p>
+        </div>
+        <div class="row comments">
+          <div *ngFor='let comment of spot.original_comments.slice(leftBound-1, rightBound)' class="comment">
+            <div class="col-sm-2">
+              <div class="thumbnail">
+                <img *ngIf="!comment.user.image" class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
+                <img *ngIf="comment.user.image" class="img-responsive user-photo" [src]="comment.user.image">
+              </div>
+            </div>
+            <div class="col-sm-10">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <strong>{{ comment.user.name }}</strong> <span class="text-muted">commented {{ comment.created_at | amTimeAgo }}</span>
+                  <a (click)="reportComment(comment.id)"><span class="glyphicon glyphicon-flag pull-right"></span></a>
+                </div>
+                <div class="panel-body">
+                  <p class="media-comment">
+                   {{ comment.content }}
+                  </p>
+                  <div class="pull-right">
+                    <button class="btn btn-dark btn-round text-uppercase" (click)="newComment(comment.id)"><span class="glyphicon glyphicon-share-alt"></span> Reply</button>
+                    <button *ngIf="comment.modified_replies.length != 0" class="btn btn-warning btn-round text-uppercase" (click)="comment.showing = !comment.showing"><span class="glyphicon glyphicon-comment"></span> {{ comment.modified_replies.length }} comments</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div *ngFor='let reply of comment.modified_replies; let i = index' class="collapse reply" [ngClass]="{'in': comment.showing}">
+              <div class="col-sm-2">
+                <div class="thumbnail">
+                  <img *ngIf="!reply.user.image" class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
+                  <img *ngIf="reply.user.image" class="img-responsive user-photo" [src]="reply.user.image">
+                </div>
+              </div>
+              <div class="col-sm-10">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <strong>{{ reply.user.name }}</strong> <span class="text-muted">commented {{ reply.created_at | amTimeAgo }}</span>
+                    <a (click)="reportComment(reply.id)"><span class="glyphicon glyphicon-flag pull-right"></span></a>
+                  </div>
+                  <div class="panel-body">
+                    <p class="media-comment">
+                      {{ reply.content }}
+                    </p>
+                    <div class="pull-right">
+                      <a class="btn btn-dark btn-round text-uppercase" (click)="newComment(comment.id)"><span class="glyphicon glyphicon-share-alt"></span> Reply</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li *ngIf="!firstPage()" class="page-item pull-left"><a class="page-link" (click)="changePage(currentPage-1)">{{ 'OTHER.PREVIOUS' | translate }}</a></li>
+            <li *ngFor="let page of pageArray()" class="page-item">
+              <a [ngClass]="{'active': currentPage == page}" class="page-link" (click)="changePage(page)">{{ page }}</a>
+            </li>
+            <li *ngIf="!lastPage()" class="page-item pull-right"><a class="page-link" (click)="changePage(currentPage+1)">{{ 'OTHER.NEXT' | translate }}</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div *ngIf="spot.original_comments.length == 0" class="col-sm-9">
+        <div class="alert alert-info">
+          {{ 'SPOT.NO_COMMENTS' | translate }}
+        </div>
+      </div>
 				<!-- TODO Could be 'You may also like' part here -->
     </div><!-- /.content -->
 </div>
