--- a/src/app/spots/spot-add-images/spot-add-images.component.html
+++ b/src/app/spots/spot-add-images/spot-add-images.component.html
@@ -6,8 +6,6 @@
           <img *ngIf="spot.main_image" class="spot-image" [src]="spot.main_image">
           <div *ngIf="!spot.main_image" class="alert alert-info no-image">
             {{ 'SPOT.NO_IMAGES' | translate }}
-            <!-- <a href="#" class="alert-link">Click here to Login and add a picture</a> -->
-            <!-- <a *ngIf="isModerator()" (click)="gotoUpdate()" class="alert-link">Click here to login and add a picture</a> -->
           </div>
           <a class="pointer" (click)="toSpot()"><h4>{{ spot.title }}</h4></a>
           <a class="geo_link">
@@ -31,9 +29,18 @@
     <div class="col-sm-6">
       <form *ngIf="!submitted && !submitting" class="row" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <input type="hidden" (value)="original_message_id">
-          <textarea type="text" class="form-control" placeholder="{{ 'SPOT_FORM.COMMENT' | translate }}" required
-                 rows="5" [(ngModel)]="comment" name="comment"></textarea>
+          <div class="row">
+            <input class="file-input" type="file" accept="image/*" multiple (change)="changeListener($event)"
+                   style="outline: none; white-space: nowrap; display: inline-block;">
+          </div>
+          <div class="row" *ngFor="let image of images">
+            <div class="col-sm-4">
+              <img [src]="image.data"  alt="Nuotraukos peržiūra..." class="img-thumbnail">
+            </div>
+            <div class="col-sm-8">
+              <input type="text" [(ngModel)]="image.title" name="title">
+            </div>
+          </div>
         </div>
         <div class="col-md-offset-3 col-md-6 section">
           <div class="form-group submit">
@@ -42,14 +49,14 @@
         </div>
       </form>
       <div *ngIf="submitted" class="panel panel-success submitted">
-        <div class="panel-heading">{{ 'SPOT_FORM.SUCCESSFUL_COMMENT_SUBMISSION' | translate }}</div>
+        <div class="panel-heading">{{ 'SPOT_FORM.SUCCESSFUL_IMAGES_SUBMISSION' | translate }}</div>
         <div class="panel-body">
-          <a [routerLink]="['/spot/' + spot.id]" class="panel-link">{{ 'SPOT_FORM.SHOW_COMMENT' | translate }}</a>
+          <a [routerLink]="['/spot/' + spot.id]" class="panel-link">{{ 'SPOT_FORM.SHOW_IMAGES' | translate }}</a>
         </div>
       </div>
       <div *ngIf="submitting" class="loading">
         <div class="loader"></div>
-        <div class="alert alert-info">{{ 'SPOT_FORM.PROCESSING_COMMENT' | translate }}</div>
+        <div class="alert alert-info">{{ 'SPOT_FORM.PROCESSING_IMAGES' | translate }}</div>
       </div>
     </div>
   </div>
