--- a/src/app/spots/spot-detail/spot-detail.component.css
+++ b/src/app/spots/spot-detail/spot-detail.component.css
@@ -103,17 +103,104 @@ h3 {
 .spot-images {
   padding-bottom: 40px;
 }
-.spot-images > div {
-	width: 100%;
-	text-align: center;
-}
-.spot-images .image > img {
-	cursor: pointer;
-	max-width: 600px;
-	max-height: 600px;
-}
-.spot-images .image > img:hover {
+.all-images img {
 	opacity: 0.8;
+  cursor: pointer;
+}
+.all-images img:hover {
+  opacity: 1;
+}
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 150px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 65%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  opacity: 1;
+  position: absolute;
+  top: 80px;
+  right: 25px;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  text-decoration: none;
+  cursor: pointer;
+}
+.mySlides {
+  display: none;
+}
+
+.cursor {
+  cursor: pointer
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px 30px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 60px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  text-decoration: none;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 14px;
+  padding: 8px 12px;
+  position: absolute;
+  top: -30px;
+}
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 10px 16px;
+  color: white;
 }
 .spot-description {
 	color: #798994;
@@ -242,13 +329,7 @@ h3 {
 		margin-bottom: 0;
 	}
 	.spot-images {
-		padding-top: 20px;
-		padding-bottom: 20px;
 		background: #ecf0f1;
-	}
-	.spot-images .image > img {
-		max-width: 400px;
-		max-height: 400px;
 	}
 }
 
