--- a/src/app/spots/spots.component.html
+++ b/src/app/spots/spots.component.html
@@ -116,8 +116,8 @@
 			[class.selected]="selectedSpot==spot">
 			<a (click)="gotoDetail(spot)">
 				<div class="img_overflow">
-					<div *ngIf="spot.images" [style.background-image]="'url(' + spot.images + ')'"></div>
-					<div *ngIf="!spot.images" class="text-center">
+					<div *ngIf="spot.main_image" [style.background-image]="'url(' + spot.main_image + ')'"></div>
+					<div *ngIf="!spot.main_image" class="text-center">
               <img id="no-image" [src]="noImage">
           </div>
         </div>
