--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,9 @@ h2 {
     text-align: center;
     margin: 0 auto;
 }
+.pointer {
+  cursor: pointer;
+}
 .btn.btn-primary {
     color: #fff;
     background-color: #007496;
