--- a/src/app/spots/spot-detail/spot-detail.component.html
+++ b/src/app/spots/spot-detail/spot-detail.component.html
@@ -107,7 +107,7 @@
 
       <div class="col-md-12">
         <h3 class="pull-left">{{ 'SPOT.COMMENTS' | translate }}</h3>
-        <button (click)="newComment()" class="btn btn-dark pull-right" style="padding: 10px 15px;">{{ 'SPOT.WRITE_COMMENT' | translate }}</button>
+        <button (click)="newComment()" class="btn btn-dark pull-right write-comment" style="padding: 10px 15px;">{{ 'SPOT.WRITE_COMMENT' | translate }}</button>
       </div>
       <div *ngIf="spot.original_comments.length != 0" class="col-sm-9">
         <div class="comments-showing">
